[gd_scene load_steps=5 format=3 uid="uid://cqnb47ywotbur"]

[ext_resource type="Script" path="res://Scripts/garbage_can.gd" id="1_b3wev"]
[ext_resource type="Texture2D" uid="uid://sqs2stw52fga" path="res://assets/Environment/Misc/waste.Garbage_NEW.png" id="1_stou4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bf0i4"]
atlas = ExtResource("1_stou4")
region = Rect2(64, 608, 32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6s3pc"]
size = Vector2(22, 27)

[node name="GarbageCan" type="Area2D"]
script = ExtResource("1_b3wev")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_bf0i4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2.5)
shape = SubResource("RectangleShape2D_6s3pc")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
